crates/nyx-lexer/tests/snapshots/integration_tests__edge_cases__annotation_complex_arg.snap
---
source: crates/nyx-lexer/tests/integration_tests.rs
expression: tokens
---
- Newline
- Hash
- Ident: link_section
- LParen
- StringLiteral: ".rodata"
- RParen
- Newline
- Const
- Ident: MAGIC
- Colon
- U32
- Eq
- IntegerLiteral:
    base: Hex
    digits: DEADBEEF
    suffix: ~
- Newline
- Hash
- Ident: align
- LParen
- IntegerLiteral:
    base: Decimal
    digits: "4096"
    suffix: ~
- RParen
- Newline
- Struct
- Ident: Page
- Newline
- Indent
- Ident: data
- Colon
- LBracket
- U8
- Semicolon
- IntegerLiteral:
    base: Decimal
    digits: "4096"
    suffix: ~
- RBracket
- Newline
- Dedent
