crates/nyx-lexer/tests/snapshots/integration_tests__edge_cases__chained_casts.snap
---
source: crates/nyx-lexer/tests/integration_tests.rs
expression: tokens
---
- Newline
- Func
- Ident: casts
- LParen
- Ident: x
- Colon
- I32
- RParen
- Arrow
- OkLiteral
- Newline
- Indent
- Let
- Ident: a
- Eq
- Ident: x
- As
- U8
- As
- U16
- As
- U32
- As
- U64
- Newline
- Let
- Ident: b
- Eq
- Ident: x
- As
- F32
- As
- F64
- Newline
- Pass
- Newline
- Dedent
