crates/nyx-lexer/tests/snapshots/integration_tests__edge_cases__consecutive_pass_functions.snap
---
source: crates/nyx-lexer/tests/integration_tests.rs
expression: tokens
---
- Newline
- Func
- Ident: multiple_pass
- LParen
- RParen
- Arrow
- OkLiteral
- Newline
- Indent
- Pass
- Newline
- Newline
- Dedent
- Func
- Ident: also_pass
- LParen
- RParen
- Arrow
- OkLiteral
- Newline
- Indent
- Pass
- Newline
- Dedent
