crates/nyx-lexer/tests/snapshots/integration_tests__edge_cases__empty_string.snap
---
source: crates/nyx-lexer/tests/integration_tests.rs
expression: tokens
---
- Newline
- Let
- Ident: empty
- Eq
- StringLiteral: ""
- Newline
- Let
- Ident: also_empty
- Eq
- StringLiteral: ""
- Newline
- Func
- Ident: takes_string
- LParen
- Ident: s
- Colon
- LBracket
- U8
- RBracket
- RParen
- Arrow
- OkLiteral
- Newline
- Indent
- Pass
- Newline
- Dedent
- Func
- Ident: use_empty
- LParen
- RParen
- Arrow
- OkLiteral
- Newline
- Indent
- Ident: takes_string
- LParen
- StringLiteral: ""
- RParen
- Newline
- Pass
- Newline
- Dedent
