crates/nyx-lexer/tests/snapshots/integration_tests__edge_cases__for_no_body.snap
---
source: crates/nyx-lexer/tests/integration_tests.rs
expression: tokens
---
- Newline
- Newline
- Func
- Ident: no_body_for
- LParen
- Ident: data
- Colon
- LBracket
- I32
- RBracket
- RParen
- Arrow
- OkLiteral
- Newline
- Indent
- For
- Ident: item
- In
- Ident: data
- Newline
- Dedent
