crates/nyx-lexer/tests/snapshots/integration_tests__edge_cases__interface_clauses_only.snap
---
source: crates/nyx-lexer/tests/integration_tests.rs
expression: tokens
---
- Newline
- Interface
- Ident: RequiresAllocator
- Newline
- Indent
- Requires
- Newline
- Indent
- Ident: Allocator
- Newline
- Dedent
- Dedent
- Interface
- Ident: MustBeOrdered
- Newline
- Indent
- Where
- Newline
- Indent
- SelfKeyword
- Colon
- Ident: Ord
- Newline
- Dedent
- Dedent
- Interface
- Ident: ExtendsOnly
- Newline
- Indent
- Extends
- Newline
- Indent
- Ident: Display
- Newline
- Ident: Debug
- Newline
- Dedent
- Dedent
