crates/nyx-lexer/tests/snapshots/integration_tests__edge_cases__only_comments.snap
---
source: crates/nyx-lexer/tests/integration_tests.rs
expression: tokens
---
- Newline
- Newline
- Newline
- Newline
